--- a/codigo-fonte/Login.html
+++ b/codigo-fonte/Login.html
@@ -105,7 +105,7 @@
       }
     });
 
-    // Função para enviar email de redefinição de senha
+    // Função para enviar email de redefinição de senha -->
     document.querySelector('#exampleModal .btn-secondary').addEventListener('click', function () {
       const email = document.getElementById('recipient-name').value;
 
